# skill-split

./: .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  API.md  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  COMMIT_MESSAGE_GUIDE.md  COMPONENT_HANDLERS.md  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT_STATUS.md  Dockerfile  EXAMPLES.md  FINAL_DELIVERABLES.md  FOLDER_RECREATION_INVESTIGATION.md  HANDLER_INTEGRATION.md  INGESTION_GUIDE.md  INSTALLATION.md  LLM_INSTRUCTIONS.md  MARKETING_ONE_PAGER.md  MVP_IMPLEMENTATION.yaml  Makefile  Makefile.extensions  PROJECT_COMPLETE.md  PROJECT_INDEX.md  RALPH_USAGE.md  README.md  README_COMPACT.md  ROADMAP.md  SESSION_SUMMARY.md  SHELL_HANDLER_TEST_RESULTS.txt  SUPABASE_SETUP.md  VECTOR_SEARCH_GUIDE.md  (+22 more)
.planning/: EMERGENCY_RESUME.md  GSD_WORKFLOW.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.serena/: project.yml
benchmark/: README.md  REPORT.md  SUMMARY.md  __init__.py  baseline_report.md  bench.py  generate_report.py  run_benchmarks.sh
core/: __init__.py  backup_manager.py  checkout_manager.py  database.py  detector.py  embedding_service.py  frontmatter_generator.py  hashing.py  hybrid_search.py  parser.py  query.py  query_interface.py  recomposer.py  secret_manager.py  skill_composer.py  skill_validator.py  supabase_store.py  validator.py
demo/: README.md  batch_processing_demo.sh  component_deployment_demo.sh  demo.db  disaster_recovery_demo.sh  progressive_disclosure.sh  run_all_demos.sh  sample_skill.md  script_handlers_demo.py  search_relevance_demo.sh  test_roundtrip_examples.sh  token_savings_demo.sh
docs/: API_QUICK_REF.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  BRAND.md  CLI_EXAMPLES.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  COMPARISON.md  COMPARISON_MATRIX.md  DEPLOYMENT.md  DESIGN_PRINCIPLES.md  DEVELOPMENT.md  EMBEDDINGS_OPTIMIZATION.md  FAQ.md  FAQ_EXTENDED.md  GLOSSARY.md  INTEGRATION_EXAMPLES.md  INTERACTIVE_TUTORIAL.md  MIGRATION.md  MIGRATION_QUICK_REF.md  PERFORMANCE.md  QUICK_REFERENCE.md  SECURITY.md  SUCCESS_STORIES.md  TESTING.md  TOKEN_OPTIMIZATION.md  TROUBLESHOOTING.md  TROUBLESHOOTING_DETAILED.md  VALUE_PROPOSITION.md  VECTOR_SEARCH_COSTS.md
examples/: api_usage.py  complete_workflow_example.py  simple_search_demo.py  skill_composition_example.py  vector_search_demo.py  web_integration_example.py
handlers/: __init__.py  base.py  component_detector.py  config_handler.py  factory.py  hook_handler.py  javascript_handler.py  plugin_handler.py  python_handler.py  script_handler.py  shell_handler.py  typescript_handler.py
integrations/: CI_CD.md  CLAUDE_CODE.md  PYTHON_PACKAGE.md  README.md  VSCODE.md
migrations/: SCHEMA_MIGRATION_GUIDE.md  add_config_script_types.sql  add_embedding_metadata.sql  create_embeddings_table.sql  enable_pgvector.sql  migrate_sqlite.py  migrate_supabase.py  optimize_vector_search.sql  unify_supabase_schema.sql  verify_migration.py
scripts/: backup_database.sh  benchmark_runner.py  create_release.sh  create_skill_template.py  estimate_costs.py  generate_embeddings.py  health_check.py  migrate_database.py  monitor_embeddings.py  onboard.sh  quality_gate.sh  test_real_files.sh  (+1 more)
(+255 files in other folders)
